microservices/payment/deployment/preprod/app/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: payment
  labels:
    app: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: ghcr.io/alexandr-io/backend/payment:latest-preprod
          imagePullPolicy: Always
      imagePullSecrets:
        - name: regcred

---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: payment
spec:
  selector:
    app: api
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3000
    - name: grpc
      port: 5051
      protocol: TCP
      targetPort: 5051
